# google-calendar-utility

./: .gitignore  Cargo.toml  Dockerfile  README.md  sign_up.yaml
.github/workflows/: ci.yaml
crates/google-api/: Cargo.toml
crates/google-api/src/: api_models.rs  errors.rs  events_client.rs  jwt.rs  lib.rs  models.rs  oauth2_client.rs
crates/holi-yoga-api/: Cargo.toml
crates/holi-yoga-api/src/: api_models.rs  classes.rs  errors.rs  holi_client.rs  lib.rs  models.rs
src/: google_event.rs  main.rs  models.rs  settings.rs
src/api_clients/: errors.rs  mod.rs  models.rs
src/api_clients/holi_yoga/: api_models.rs  classes.rs  consts.rs  holi_client.rs  mod.rs  parse.rs
src/api_clients/plastilin/: api_models.rs  mod.rs  models.rs  plastilin_client.rs
