[package]
name = "google-calendar-utility"
version = "24.10.2"
edition = "2021"

[[bin]]
name = "google-calendar-utility"
path = "src/main.rs"

[workspace]
members = [".", "./crates/google-api"]

[dependencies]
async-trait = "0.1.88"
camino = { version = "1.1.7", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.9.0", features = ["serde"] }
clap = { version = "4.5.3", features = ["env", "derive"] }
color-eyre = "0.6.3"
convert_case = "0.8.0"
dotenvy = "0.15.7"
email_address = "0.2.7"
fern = { version = "0.6.2", features = ["colored"] }
futures = "0.3.30"
google-api = { path = "./crates/google-api" }
jsonwebtoken = "9.3.0"
log = "0.4.22"
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls-native-roots",
    "json",
] }
scraper = "0.19.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["serde"] }
