[package]
name = "google-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
color-eyre = "0.6.3"
email_address = "0.2.7"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.5", default-features = false, features = [
  "rustls-tls-native-roots",
  "blocking",
  "json",
] }
serde = "1.0.204"
thiserror = "1.0.63"
url = "2.5.2"
urlencoding = "2.1.3"
