[package]
name = "holi-yoga-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
color-eyre = "0.6.3"
log = "0.4.22"
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls-native-roots",
    "blocking",
    "json",
] }
scraper = "0.19.1"
serde = "1.0.204"
serde_json = "1.0.120"
thiserror = "1.0.63"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["serde"] }
